--- a/src/main/resources/com/example/minesweepertsifx/main.fxml
+++ b/src/main/resources/com/example/minesweepertsifx/main.fxml
@@ -1,13 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minesweepertsifx.Main">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.minesweepertsifx.Controller">
    <children>
-      <Button layoutX="274.0" layoutY="188.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="326.0" layoutY="213.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="222.0" layoutY="163.0" mnemonicParsing="false" text="Button" />
+      <GridPane layoutX="200.0" layoutY="155.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Rows (max: 40)" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+            <Label text="Columns (max: 40)" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <Label text="Mines" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+            <TextField fx:id="rowsField" GridPane.columnIndex="1" />
+            <TextField fx:id="colsField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="minesField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
+      <Button layoutX="281.0" layoutY="266.0" mnemonicParsing="false" onAction="#attemptStartGame" text="Play" />
+      <Label layoutX="237.0" layoutY="94.0" text="MinesweeperFX">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <Label fx:id="mainMenuMessage" layoutX="137.0" layoutY="130.0" text="Please enter the size of your game grid and number of mines." />
+      <Label fx:id="mainMenuErrorMessage" layoutX="232.0" layoutY="303.0" textFill="RED" />
    </children>
 </AnchorPane>
