--- a/src/main/resources/com/example/minesweepertsifx/win.fxml
+++ b/src/main/resources/com/example/minesweepertsifx/win.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -12,5 +13,6 @@
             <Font size="24.0" />
          </font>
       </Label>
+      <Button layoutX="263.0" layoutY="251.0" mnemonicParsing="false" onAction="#playAgain" text="Play again?" />
    </children>
 </AnchorPane>
